react-front-end/src/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

main.container {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  margin: auto;
}

div.plants {
  display: flex;
  flex-direction: column;
}

div.ui.list.plant-list {
  display: flex;
  flex-direction: column;
  margin: auto;
}

main.plant-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding-top: 25px;
  width: 95%;
  column-gap: 5%;
  margin: auto;
}

div.icons {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 30%;
}

i.rain.icon, i.book.icon, i.sun.icon, i.paw.icon, i.world.icon, i.lab.icon {
  font-size: 20px;
}

img.plant-photo {
  height: 80vh;
  border-radius: 5%;
}

div.plant-desc {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 50%;
}

